--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,8 +3,76 @@
 	background: url('../img/background.png');
 }
 
-.search__gif img {
+.img-responsive {
     width: 100%;
     height: auto;
-    min-height: 250px;
+}
+.search__gifs {
+    padding: 10px 30px;
+}
+.search__gif {
+    max-height: 400px;
+    overflow-y: scroll;
+    padding-bottom: 10px;
+}
+	.search__gif .gif__result {
+        margin:0;
+		padding:0;
+	}
+
+    .search__gif img {
+        width: 100%;
+        height: auto;
+        min-height: 250px;
+    }
+    .search__gif .gif-image {
+        position:absolute;
+        top:0;
+        background-position:50% 50%;
+        background-size:cover;
+        width:100%;
+        height:100%;
+    }
+    .search__gif a {
+        display:block;
+        width:100%;
+        height:100%;
+        overflow:hidden;
+    }
+    .search__gif .video__overlay {
+        position: absolute;
+        z-index: 999;
+    }
+    .search__gif .search-wrapper {
+        width: 100%;
+        display: inline-block;
+        position: relative;
+        -ms-border-radius: 20px;
+        border-radius: 20px;
+        background: #000;
+        overflow: hidden;
+    }
+    .search__gif .search-wrapper:after {
+        padding-top: 100%;
+        display: block;
+        content: '';
+    }
+    .search__gif .search-content {
+        position: absolute;
+        top: 0; bottom: 0; right: 0; left: 0;
+    }
+        .search__gif .search-content div {
+            width: 100%;
+            height: 100%;
+        }
+
+    .search__gif video {
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        -ms-border-radius: 20px;
+        border-radius: 20px;
+    }
 }
