--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -4,7 +4,7 @@
     navigation history that also transitions its views in and out.
     -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-    <ion-tab title="Streams" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/streams">
+    <ion-tab title="Streams" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/streams" nav-clear>
         <ion-nav-view name="tab-streams"></ion-nav-view>
     </ion-tab>
     <ion-tab title="Search" icon-off="ion-ios-search" icon-on="ion-ios-search-strong" href="#/tab/search">
