--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,8 +7,28 @@
     width: 100%;
     height: auto;
 }
+.webPageFrame {
+    width: 100%;
+    height: 100%;
+}
+.media__container,
+.media__container > div {
+    height: 100%;
+}
+    .media__container video {
+        width: 100%;
+        height: auto;
+    }
+
 .search__gifs {
     padding: 10px 30px;
+}
+.btn__share {
+    position: absolute;
+    bottom: 10px;
+    right: 8px;
+    border-radius: 15px;
+    z-index: 3;
 }
 .search__gif {
     max-height: 400px;
@@ -25,7 +45,7 @@
         height: auto;
         min-height: 250px;
     }
-    .search__gif .gif-image {
+    .search__gif .media-image {
         position:absolute;
         top:0;
         background-position:50% 50%;
@@ -41,7 +61,7 @@
     }
     .search__gif .video__overlay {
         position: absolute;
-        z-index: 999;
+        z-index: 2;
     }
     .search__gif .search-wrapper {
         width: 100%;
