--- a/www/templates/tab-links.html
+++ b/www/templates/tab-links.html
@@ -2,15 +2,16 @@
     <ion-nav-title>
         {{link.comment}}
     </ion-nav-title>
-    <ion-content>
-        <iframe ng-if="!isImage" ng-src="{{link.url}}"></iframe>
-        <img class="img-responsive" ng-if="isImage" ng-src="{{link.url}}" />
-        <!--<ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
-                <ion-slide ng-repeat="link in links">
-                    <div>
-                        <h1>{{link.url}}</h1>
-                    </div>
-                </ion-slide>
-            </ion-slide-box>-->
+    <ion-content scroll="false">
+        <media source="{{link.url}}" autoplay="true" />
     </ion-content>
+    <!--<ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
+              <ion-slide ng-repeat="link in links">
+                  <div>
+                      <h1>{{link.url}}</h1>
+                  </div>
+              </ion-slide>
+          </ion-slide-box>-->
+
+
 </ion-view>
