--- a/www/templates/tab-stream.html
+++ b/www/templates/tab-stream.html
@@ -3,7 +3,7 @@
       <ion-list>
           <ion-item ng-repeat="link in $parent.links" type="item-text-wrap" href="#/tab/links/{{::$parent.key}}/{{::link.id}}/{{::$parent.currentPage}}">
               <h2>{{link.comment}}</h2>
-              <p>Slapped</p>
+              <p>Slapped by {{link.userName}}</p>
           </ion-item>
       </ion-list>
       <ion-infinite-scroll ng-if="$parent.canLoadMore" on-infinite="$parent.load()" distance="1%"></ion-infinite-scroll>
