--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -11,7 +11,7 @@
                 <div class="search-wrapper">
                     <div class="search-content">
                         <gif thumb="{{gif.thumbnailUrl}}" source="{{gif.url}}">
-                            <button ui-sref="tab.share({thumb: gif.thumbnailUrl, url: gif.url})" class="button icon ion-share button-positive btn__share"></button>
+                            <button ui-sref="tab.search.share({url: gif.url})" class="button icon ion-share button-positive btn__share"></button>
                         </gif>
                     </div>
                 </div>
