--- a/www/templates/tab-stream.html
+++ b/www/templates/tab-stream.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{stream.name}}">
   <ion-content>
       <ion-list>
-          <ion-item ng-repeat="link in $parent.links" type="item-text-wrap" href="#/tab/links/{{::$parent.key}}/{{::link.id}}/{{::$parent.currentPage}}">
+          <ion-item ng-repeat="link in $parent.links" type="item-text-wrap" href="#/tab/streams/stream/{{::$parent.key}}/links/{{::link.id}}/{{::$parent.currentPage}}">
               <h2>{{link.comment}}</h2>
               <p>Slapped by {{link.userName}}</p>
           </ion-item>
