App now works with raw notifications in WP10... There is a bug in WP8.1 which completely crashes the OS.

--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Register">
+﻿<ion-view view-title="Register">
   <ion-content>
     <form name="registerForm" ng-submit="register()">
       <div class="list">
