--- a/www/templates/tab-share.html
+++ b/www/templates/tab-share.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Share">
+﻿<ion-view view-title="Share">
     <ion-content scroll="false" class="padding">
         <div class="search__gif" style="padding:10px 60px;">
             <div class="search-wrapper">
