--- a/www/templates/tab-streams.html
+++ b/www/templates/tab-streams.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Streams">
+﻿<ion-view view-title="Streams">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="subscription in $parent.subscriptions" type="item-text-wrap" href="#/tab/streams/stream/{{subscription.stream.key}}">
