--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,4 @@
-/* Empty. Add your own CSS if you like */
+﻿/* Empty. Add your own CSS if you like */
 .pane, .view {
 	background: url('../img/background.png');
 }
@@ -46,11 +46,12 @@
     position: absolute;
     bottom: 10px;
     right: 8px;
+    -ms-border-radius: 15px;
     border-radius: 15px;
     z-index: 3;
 }
+
 .search__gif {
-    max-height: 400px;
     overflow-y: scroll;
     padding-bottom: 10px;
 }
@@ -114,4 +115,9 @@
         -ms-border-radius: 20px;
         border-radius: 20px;
     }
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak,
+.x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
+    display: none !important;
 }
