--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Search">
+﻿<ion-view view-title="Search">
     <ion-nav-title>
         <label class="item item-input">
             <i class="icon ion-search placeholder-icon"></i>
