--- a/www/templates/tab-share.html
+++ b/www/templates/tab-share.html
@@ -3,7 +3,7 @@
         <div class="search__gif" style="padding:10px 60px;">
             <div class="search-wrapper">
                 <div class="search-content">
-                    <gif thumb="{{thumb}}" source="{{url}}" autoplay="true" />
+                    <media source="{{url}}" autoplay="true" />
                 </div>
             </div>
         </div>
@@ -16,7 +16,7 @@
                     </select>
                 </label>
                 <label class="item item-input">
-                    <input type="text" ng-model="comment" placeholder="Comment">
+                    <input type="text" ng-model="$parent.comment" placeholder="Comment">
                 </label>
                 <label class="item">
                     <button class="button button-block button-positive" type="submit" ng-disabled="!canSubmit() || sending">Share</button>
