--- a/www/templates/tab-share.html
+++ b/www/templates/tab-share.html
@@ -1,11 +1,14 @@
 ﻿<ion-view view-title="Share">
     <ion-content scroll="false" class="padding">
-        <div class="search__gif" style="padding:10px 60px;">
-            <div class="search-wrapper">
-                <div class="search-content">
-                    <media source="{{url}}" autoplay="true" />
+        <!--<div class="search__gif" style="padding:10px 60px;">
+                <div class="search-wrapper">
+                    <div class="search-content">
+                        <media source="{{url}}" autoplay="true" />
+                    </div>
                 </div>
-            </div>
+            </div>-->
+        <div class="share-content">
+            <media source="{{url}}" autoplay="true" />
         </div>
         <form name="shareForm" ng-submit="share()">
             <div class="list">
