--- a/www/templates/tab-share.html
+++ b/www/templates/tab-share.html
@@ -1,8 +1,8 @@
 ﻿<ion-view view-title="Share">
     <ion-content scroll="false" class="padding">
         <!--<div class="search__gif" style="padding:10px 60px;">
-                <div class="search-wrapper">
-                    <div class="search-content">
+                <div class="image-wrapper">
+                    <div class="image-content">
                         <media source="{{url}}" autoplay="true" />
                     </div>
                 </div>
