--- a/www/css/style.css
+++ b/www/css/style.css
@@ -94,7 +94,7 @@
         position: absolute;
         z-index: 2;
     }
-    .media__gif .search-wrapper {
+    .media__gif .image-wrapper {
         width: 100%;
         display: inline-block;
         position: relative;
@@ -103,16 +103,16 @@
         background: #000;
         overflow: hidden;
     }
-    .media__gif .search-wrapper:after {
+    .media__gif .image-wrapper:after {
         padding-top: 100%;
         display: block;
         content: '';
     }
-    .media__gif .search-content {
+    .media__gif .image-content {
         position: absolute;
         top: 0; bottom: 0; right: 0; left: 0;
     }
-        .media__gif .search-content div {
+        .media__gif .image-content div {
             width: 100%;
             height: 100%;
         }
