--- a/www/templates/tab-stream.html
+++ b/www/templates/tab-stream.html
@@ -1,11 +1,17 @@
 ﻿<ion-view view-title="{{stream.name}}">
-  <ion-content>
-      <ion-list>
-          <ion-item ng-repeat="link in $parent.links" ng-class="{'bold' : link.isNew}" type="item-text-wrap" ui-sref="tab.streams.stream.links({ streamKey: link.streamKey, linkId: link.id, link: link })">
-              <h2>{{link.comment}}</h2>
-              <p>Slapped by {{link.userName}}</p>
-          </ion-item>
-      </ion-list>
-      <ion-infinite-scroll ng-if="$parent.canLoadMore" on-infinite="$parent.load()" distance="1%"></ion-infinite-scroll>
-  </ion-content>
+    <ion-content>
+        <ion-list>
+            <ion-item ng-repeat="link in $parent.links" ng-class="{'bold' : link.isNew}" type="item-text-wrap" ui-sref="tab.streams.stream.links({ streamKey: link.streamKey, linkId: link.id, link: link })">
+                <h2>{{link.comment}}</h2>
+                <p>Slapped by {{link.userName}}</p>
+            </ion-item>
+        </ion-list>
+        <ion-infinite-scroll ng-if="$parent.canLoadMore" on-infinite="$parent.load()" distance="1%"></ion-infinite-scroll>
+        <div class="card" ng-if="noResults">
+            <div class="item item-text-wrap text-center">
+                <strong>Share this stream with friends.</strong><br />
+                Search for gifs and share them to this stream!
+            </div>
+        </div>
+    </ion-content>
 </ion-view>
