--- a/www/templates/tab-stream.html
+++ b/www/templates/tab-stream.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="link in $parent.links" ng-class="{'bold' : link.isNew}" type="item-text-wrap" ui-sref="tab.streams.stream.links({ streamKey: link.streamKey, linkId: link.id, link: link })">
-                <h2>{{link.comment}}</h2>
+                <h2>{{link.comment || link.url}}</h2>
                 <p>Slapped by {{link.userName}}</p>
             </ion-item>
         </ion-list>
