--- a/www/css/style.css
+++ b/www/css/style.css
@@ -123,6 +123,7 @@
         left:0;
         width:100%;
         height:100%;
+        min-height: 100%;
         -ms-border-radius: 20px;
         border-radius: 20px;
     }
@@ -140,4 +141,8 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak,
 .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
     display: none !important;
+}
+
+em {
+    font-style: italic;
 }
