--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,11 +1,13 @@
 ﻿<ion-view view-title="Search">
     <ion-nav-title>
-        <label class="item item-input">
-            <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" placeholder="Search" placeholder="Search gif" data-ng-model="$parent.search" ng-model-options="{debounce: 1000}">
-        </label>
+        <form ng-submit="$parent.currentPage = 1; $parent.searchGif()">
+            <label class="item item-input">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" placeholder="Search gif" data-ng-model="$parent.search" return-close="true" on-return="$parent.currentPage = 1; $parent.searchGif();">
+            </label>
+        </form>
     </ion-nav-title>
-    <ion-content class="search__gifs">
+    <ion-content class="search__gifs" keep-scroll>
         <button class="button button-balanced button-large new-link-count" ng-if="getNewLinkCount()" ng-bind="getNewLinkCount()"></button>
         <ion-list ng-if="$parent.results">
             <div class="media__gif" ng-repeat="gif in $parent.results">
